--- a/index.html
+++ b/index.html
@@ -1029,7 +1029,7 @@
           saveDataBtn.classList.remove('pulse');
         }, 1000);
 
-        alert("Registro salvo com sucesso!");
+        // alert("Registro salvo com sucesso!");
         resetCalculator();
 
         function resetInputs() {
@@ -2132,7 +2132,7 @@
       updateSavedRecordsList();
 
       // Show success message
-      alert('Registro atualizado com sucesso!');
+      // alert('Registro atualizado com sucesso!');
     }
 
     // Add edit button to record items
