feat: torna campo refProduct editável

--- a/index.html
+++ b/index.html
@@ -750,8 +750,8 @@
         </div>
         <div class="input-group">
           <label for="refProduct">Reference:</label>
-          <input type="text" id="refProduct" readonly>
-      </div>
+          <input type="text" id="refProduct">
+        </div>
       </div>
       <div id="addProductContainer" class="add-product-container">
 
