Esconder botões de salvar e resetar

--- a/index.html
+++ b/index.html
@@ -771,11 +771,11 @@
 
       <!-- Botões escondidos na nova implementação de auto-save -->
       <div style="display: none;">
-        <button id="resetBtn" class="reset">Limpar Tudo</button>
+        <button id="resetBtn" class="reset" style="display: none;">Limpar Tudo</button>
       </div>
       
       <div style="display: none;">
-        <button id="saveDataBtn" class="cashback"
+        <button id="saveDataBtn" class="cashback" style="display: none;"
           >
           Salvar Registro
         </button>
